--- a/designscenario_ON_ios.html
+++ b/designscenario_ON_ios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Design Attribute Visual Gallery — iOS-optimised</title>
+<title>Design Attribute Visual Gallery — iOS Safe (Single Iframe)</title>
 <style>
   :root { --bg:#f6f6f7; --ink:#141416; --muted:#5f6368; --border:#e6e6ea; --btn:#fff; --btn-active:#141416; --btn-active-ink:#fff; }
   * { box-sizing: border-box; }
@@ -13,8 +13,7 @@
   header h1 { margin:0; font-size:28px; }
   header p { margin:6px 0 0; color:var(--muted); }
 
-  /* Filters (no backdrop-filter: it can crash iOS on some devices) */
-  .filters { position: sticky; top: 0; z-index: 20; background: #f6f6f7; padding:12px 24px; border-top:1px solid var(--border); border-bottom:1px solid var(--border); }
+  .filters { position: sticky; top:0; z-index:20; background:#f6f6f7; padding:12px 24px; border-top:1px solid var(--border); border-bottom:1px solid var(--border); }
   .filters-row { display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:space-between; }
   .groups { display:flex; gap:16px; flex-wrap:wrap; align-items:center; }
   .group { display:flex; gap:8px; flex-wrap:wrap; align-items:center; }
@@ -23,12 +22,11 @@
   .btn[data-active="true"] { background:var(--btn-active); color:var(--btn-active-ink); border-color:var(--btn-active); }
   .btn.reset { background:#fff; border-color:#d0d7de; }
 
-  /* Single viewport with double-buffer iframes */
   .stage { position: relative; height: 72vh; margin:16px 24px 24px; background:#fff; border:1px solid var(--border); border-radius:12px; overflow:hidden; }
-  .layer { position:absolute; inset:0; transition: opacity 350ms ease; }
-  .layer iframe { width:100%; height:100%; border:0; display:block; }
-  .hidden { opacity:0; pointer-events:none; }
-  .visible { opacity:1; pointer-events:auto; }
+  .frame-wrap { position:absolute; inset:0; }
+  iframe { width:100%; height:100%; border:0; display:block; }
+  .fade { animation: fadein 350ms ease; }
+  @keyframes fadein { from { opacity:0 } to { opacity:1 } }
 
   .controls { position:absolute; inset:0; display:flex; align-items:center; justify-content:space-between; pointer-events:none; z-index:2; }
   .controls .nav { pointer-events:auto; display:flex; gap:8px; }
@@ -49,8 +47,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Design Attribute Visual Gallery — iOS-optimised</h1>
-      <p>Loads one panorama at a time to avoid iOS reload loops. Filters, pills, prev/next, and autoplay included.</p>
+      <h1>Design Attribute Visual Gallery — iOS Safe</h1>
+      <p>Single-iframe version for iPhone stability. Filters, pills, ◀ ▶, and autoplay included.</p>
     </header>
 
     <div class="filters" id="filters">
@@ -80,19 +78,11 @@
       </div>
     </div>
 
-    <div class="stage" id="stage">
-      <!-- double-buffer layers -->
-      <div class="layer visible" id="layerA">
-        <iframe id="iframeA"
-          allow="fullscreen; accelerometer; gyroscope; magnetometer"
+    <div class="stage">
+      <div class="frame-wrap">
+        <iframe id="pano" allow="fullscreen; accelerometer; gyroscope; magnetometer"
           allowfullscreen webkitallowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <div class="layer hidden" id="layerB">
-        <iframe id="iframeB"
-          allow="fullscreen; accelerometer; gyroscope; magnetometer"
-          allowfullscreen webkitallowfullscreen referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-
       <div class="controls">
         <div class="nav left"><button id="prevBtn" aria-label="Previous">◀</button></div>
         <div class="nav right"><button id="nextBtn" aria-label="Next">▶</button></div>
@@ -110,7 +100,6 @@
   </div>
 
 <script>
-/* ----- Data: IDs, attributes, URLs (Set ON) ----- */
 const DATA = [
   { id:"0",  title:"0 · Clean base image",                     scale:"—",         visibility:"—",      fi:"—",       url:"https://momento360.com/e/u/da4801de5f83491793e2251d91cebc11?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium&display-plan=true" },
   { id:"1",  title:"1 · Scale_Low · Vi_Low · FI_Low",          scale:"Scale_Low", visibility:"Vi_Low", fi:"FI_Low", url:"https://momento360.com/e/u/657c7111f8bb4a12a37edc1722f94fbf?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium&display-plan=true" },
@@ -127,15 +116,11 @@ const DATA = [
   { id:"12", title:"12 · Scale_High · Vi_High · FI_High",      scale:"Scale_High",visibility:"Vi_High",fi:"FI_High",url:"https://momento360.com/e/u/f18871496a694661b04e77a8a5a9c375?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium&display-plan=true" }
 ];
 
-/* ----- State + helpers ----- */
-const state = { scale:'all', visibility:'all', fi:'all', idx:0, autoplay:false, timer:null, front:'A' };
-const layerA = document.getElementById('layerA');
-const layerB = document.getElementById('layerB');
-const iframeA = document.getElementById('iframeA');
-const iframeB = document.getElementById('iframeB');
-const track   = document.getElementById('track');
-const meta    = document.getElementById('meta');
-const openLink= document.getElementById('openLink');
+const state = { scale:'all', visibility:'all', fi:'all', idx:0, autoplay:false, timer:null };
+const pano = document.getElementById('pano');
+const track = document.getElementById('track');
+const meta = document.getElementById('meta');
+const openLink = document.getElementById('openLink');
 const autoBtn = document.getElementById('autoBtn');
 
 function setGroupActive(groupEl, value){ groupEl.querySelectorAll('.btn').forEach(b=>b.dataset.active='false'); const btn=groupEl.querySelector(`.btn[data-value="${value}"]`); if(btn) btn.dataset.active='true'; }
@@ -147,43 +132,31 @@ function buildTrack(list){
   track.innerHTML='';
   list.forEach((it,i)=>{
     const b=document.createElement('button');
-    b.className='pill'+(i===state.idx?' active':'');
-    b.textContent=it.id; b.title=it.title;
+    b.className='pill'+(i===state.idx?' active':''); b.textContent=it.id; b.title=it.title;
     b.onclick=()=>{ stopAutoplay(); goTo(i); };
     track.appendChild(b);
   });
 }
 
-/* load into back layer, then swap, and blank the old one (frees memory on iOS) */
-function loadInto(which,url,thenShow){
-  const frame = (which==='A')?iframeA:iframeB;
-  frame.src = url;
-  frame.onload = ()=>{ thenShow && thenShow(); };
-}
-function show(which){
-  if(which==='A'){ layerA.className='layer visible'; layerB.className='layer hidden'; iframeB.src='about:blank'; }
-  else            { layerB.className='layer visible'; layerA.className='layer hidden'; iframeA.src='about:blank'; }
-  state.front = which;
+function load(url){
+  // Blank first to free memory; then set new src on the next tick.
+  pano.classList.remove('fade');
+  pano.src = 'about:blank';
+  setTimeout(()=>{ pano.src = url; pano.classList.add('fade'); }, 50);
 }
 
-function goTo(i){ state.idx=i; updateHud(); transitionTo(current()[state.idx]?.url); }
-function transitionTo(url){
-  if(!url) return;
-  const nextLayer = state.front==='A' ? 'B' : 'A';
-  loadInto(nextLayer, url, ()=>show(nextLayer));
-}
 function updateHud(){
-  const list = current();
+  const list=current();
   if(!list.length){ meta.textContent='0 / 0'; openLink.href='#'; return; }
   meta.textContent = `${state.idx+1} / ${list.length} — ${list[state.idx].title}`;
   openLink.href = list[state.idx].url;
   document.querySelectorAll('.pill').forEach((el,i)=>el.classList.toggle('active', i===state.idx));
 }
 
-function prev(){ const l=current(); if(!l.length) return; state.idx=(state.idx-1+l.length)%l.length; updateHud(); transitionTo(l[state.idx].url); }
-function next(){ const l=current(); if(!l.length) return; state.idx=(state.idx+1)%l.length; updateHud(); transitionTo(l[state.idx].url); }
+function goTo(i){ state.idx=i; updateHud(); const url=current()[state.idx]?.url; if(url) load(url); }
+function prev(){ const l=current(); if(!l.length) return; state.idx=(state.idx-1+l.length)%l.length; updateHud(); load(l[state.idx].url); }
+function next(){ const l=current(); if(!l.length) return; state.idx=(state.idx+1)%l.length; updateHud(); load(l[state.idx].url); }
 
-/* Controls */
 document.getElementById('prevBtn').addEventListener('click', ()=>{ stopAutoplay(); prev(); });
 document.getElementById('nextBtn').addEventListener('click', ()=>{ stopAutoplay(); next(); });
 window.addEventListener('keydown', e=>{ if(e.key==='ArrowLeft'){ stopAutoplay(); prev(); } if(e.key==='ArrowRight'){ stopAutoplay(); next(); } });
@@ -204,8 +177,6 @@ function stopAutoplay(){ state.autoplay=false; autoBtn.setAttribute('aria-presse
 autoBtn.addEventListener('click', ()=>{ state.autoplay ? stopAutoplay() : startAutoplay(); });
 
 function build(){ const list=current(); buildTrack(list); updateHud(); }
-
-/* Init */
 build(); goTo(0);
 </script>
 </body>
