--- a/designscenario_ON_ios.html
+++ b/designscenario_ON_ios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Design Attribute Visual Gallery — iOS Safe (Single Iframe)</title>
+<title>Design Scenario_ON</title>
 <style>
   :root { --bg:#f6f6f7; --ink:#141416; --muted:#5f6368; --border:#e6e6ea; --btn:#fff; --btn-active:#141416; --btn-active-ink:#fff; }
   * { box-sizing: border-box; }
@@ -47,8 +47,8 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Design Attribute Visual Gallery — iOS Safe</h1>
-      <p>Single-iframe version for iPhone stability. Filters, pills, ◀ ▶, and autoplay included.</p>
+      <h1>Design Scenario_ON</h1>
+      <p>Drag within the panorama to explore</p>
     </header>
 
     <div class="filters" id="filters">
